# SimpleEngine

./: .gitignore  CMakeLists.txt  README.md  start.bat
.VSCodeCounter/2025-03-26_20-02-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/shaders/: fragment.fs  fragmentLine.fs  fragmentModel.fs  vertexLine.vs  vertexModel.vs
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  ObjectController.cpp  ObjectController.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  World.cpp  World.hpp  main.cpp
src/Lighting/: DirectionLight.cpp  DirectionLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
src/Shaders/: Shader.cpp  Shader.hpp
src/Utilities/: ResourceManager.cpp  ResourceManager.hpp  Time.cpp  Time.hpp
src/io/: InputObjects.cpp  InputObjects.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
